# simd-utf8-validation

./: CMakeLists.txt  branchy.c  branchy.h  fsm.c  fsm.h  gen-simd-tables.ts  lookup.c  lookup.c.old  lookup.h  lookup.ll  lookup256.c  lookup256.h  lookup512-fake.c  lookup512-fake.h  main.c  readme.md  vecs.h  vecs.ll
